Add email field to register page

--- a/Project-Code/views/pages/register.ejs
+++ b/Project-Code/views/pages/register.ejs
@@ -8,6 +8,10 @@
         <h1>Register</h1>
         <form action="/register" method="POST">
             <div class="mb-3">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+            <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username">
             </div>
