--- a/Project-Code/views/partials/menu.ejs
+++ b/Project-Code/views/partials/menu.ejs
@@ -11,6 +11,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/login">Log In</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Log Out</a>
+            </li>
         </ul>
     </nav>
 </header>
