--- a/Project-Code/views/partials/menu.ejs
+++ b/Project-Code/views/partials/menu.ejs
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="/"></a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link" href="/home">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
