--- a/Project-Code/views/partials/menu.ejs
+++ b/Project-Code/views/partials/menu.ejs
@@ -9,10 +9,11 @@
                 <a class="nav-link" href="/register">Register</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/login">Log In</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">Log Out</a>
+                <% if (locals.loggedin) { %>
+                    <a class="nav-link" href="/logout">Log Out</a>
+                <% } else { %>
+                    <a class="nav-link" href="/login">Log In</a>
+                <% } %>
             </li>
         </ul>
     </nav>
