Add message box to home page

--- a/Project-Code/views/pages/home.ejs
+++ b/Project-Code/views/pages/home.ejs
@@ -3,6 +3,8 @@
 
 <main class="home">
   <body class="bg-light">
+    <div class="col"><%- include ('../partials/message') %></div>
+    
     <main role="main" class="container">
       <div class="my-3 p-3 bg-white rounded box-shadow" style="box-shadow: 0 0 1px 5px grey;">
         <h6 class="border-bottom border-gray pb-2 mb-0">Recent Messages</h6>
