--- a/Project-Code/views/pages/message.ejs
+++ b/Project-Code/views/pages/message.ejs
@@ -5,18 +5,32 @@
     <body class="bg-light">
         <div style="margin:10px">Messages with <%= locals.username%></div>
         <main role="main" class="container">
-            <table class="table">
+                <% chat.forEach(message => { %>
+                    <% if (locals.username == message.sender_username) { %>
+                    <div class="container" style="width:70vw; height: 50px; background-color: #ffffff; margin: 10px; border-radius: 5px;">
+                        <%= message.message_text%>
+                        <span style="float: right">From: <%= message.sender_username%></span>
+                    </div>
+                    <% } else { %>
+                    <div class="container" style="width:70vw; height: 50px; background-color: #26a69a; margin: 10px; border-radius: 5px; color:#ffffff;">
+                        <%= message.message_text%>
+                        <span style="float: right"></span>
+                    </div> 
+                    <% } %>
+                <% }) %>
+            <!-- <table class="table">
                 <th>Sender</th>
                 <th>Receiver</th>
                 <th>Message</th>
                 <% chat.forEach(message => { %>
+                    <td><%= message.message_text%></td>
                     <tr>
                         <td><%= message.sender_username%></td>
                         <td><%= message.receiver_username%></td>
                         <td><%= message.message_text%></td>
                     </tr>
                 <% }) %>
-            </table>
+            </table> -->
         </main>
         <form action="/message/<%= locals.username %>" method="POST">
             <label for="messageTextBox" class="form-label" style="margin:10px">Send Message</label>
