--- a/Project-Code/views/pages/home.ejs
+++ b/Project-Code/views/pages/home.ejs
@@ -8,7 +8,7 @@
         <form action="/addContact" method="POST">
           <div class="mb-3">
             <label for="username" class="form-label">Add New Contact</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+            <input type="text" class="form-control" name="newContactUsername" placeholder="Username">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
         </form>
